# desktop-res-manager

./: .env.example  LICENSE  README.md  __main__.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  bootstrap.py
app/db/: database.py  models.py
app/ui/: login_window.py  main_window.py  registration_request_window.py
reservation_manager/: __init__.py  __main__.py  config.py  database.py  main.py  models.py
ui/: __init__.py  login_window.py  main_window.py  registration_request_window.py
