[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-res-manager"
version = "0.1.0"
description = "Desktop reservations manager built with PyQt6 and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7,<7.0",
  "SQLAlchemy>=2.0,<3.0",
  "mysql-connector-python>=9.0,<10.0",
  "python-dotenv>=1.0,<2.0",
  "keyring>=25.0,<26.0",
]

[project.scripts]
desktop-res-manager = "app.bootstrap:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]
